# 2025-GFP-variant-design

./: README.md  add_missing_columns.py  create_embeddings_from_seq_score.py  pyproject.toml
.github/workflows/: lint.yml
experimental_data/: 032125_rep1_rep2.csv  042425_rep3.csv  043025_rep4.csv
notebooks/: 01_train_model.ipynb  02_generate_sequences.ipynb  03_create_figures.ipynb  04_analyze_experimental_data.ipynb  05_visualize_fluorescence.ipynb  cnn.ipynb
outputs/: all_sequences.fasta  all_sequences_predictions.csv  all_sequences_predictions.pt  bottom_5_sequences.fasta  cnn_ensemble_model.pth  top_5_sequences.fasta
outputs/all_seqs_embeddings/: 103C:120A:156N:5M.pt  107F:115M:204M:188R.pt  10H:18L:197A:74T.pt  110S:9I:86G:201A.pt  110V:192D:131I:14H.pt  110V:94C:230W:231A.pt  112S:59V:195K:215Q.pt  113K:96G:211H:116S.pt  114M:14T:22H:189C.pt  114T:234C:44F:156H.pt  114Y:227N:2Q:100N.pt  115S:100F:16R:55D.pt  117H:176C:159T:225E.pt  127A:224A:57Q:235M.pt  127Q:158V:41F:58W.pt  130H:76A:28I:61N.pt  132L:212K:181L:165I.pt  132Y:123N:138Q:197D.pt  133F:11C:170N:179T.pt  139C:152H:203K:28L.pt  139T:24V:177Y:167L.pt  140I:228Y:153N:233W.pt  142V:233F:86F:212S.pt  143H:135F:138I:25T.pt  145W:175T:169L:196K.pt  146T:10H:177P:9E.pt  152R:205F:27Q:208S.pt  155R:154Q:104S:64M.pt  157E:205S:165T:203E.pt  157Q:138L:105M:77Q.pt  163H:146N:72G:210S.pt  165G:226Q:107M:3V.pt  166A:98S:3S:152Y.pt  168L:164S:29F:35W.pt  171I:176V:129Q:231W.pt  172N:11T:37N:159H.pt  175F:2L:194A:50E.pt  177P:29M:230P:188K.pt  186N:192F:206F:112R.pt  190H:9T:230G:205H.pt  (+60 more)
scripts/: modal_cnn_training.py
src/: data.py  embeddings.py  models.py  training.py  utils.py
