[build-system]
requires = ["setuptools>=45", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "gfp-variant-design"
version = "0.1.0"
description = "CNN ensemble model for GFP variant design and activity prediction"
authors = [
    {name = "Erin McGeever", email = "erin.mcgeever@arcadiascience.com"}
]
readme = "README.md"
requires-python = "==3.12.1"
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Science/Research",
    "Topic :: Scientific/Engineering :: Bio-Informatics",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.12",
]
dependencies = [
    "torch==2.4.0",
    "numpy==1.26.4",
    "pandas==2.2.2",
    "scikit-learn==1.5.1",
    "tqdm==4.66.4",
    "matplotlib==3.9.2",
    "seaborn==0.13.2",
    "fair-esm==2.0.0",
    "fairscale==0.4.13",
    "ipykernel==6.29.5",
    "arcadia-pycolor==0.6.4"
]

[project.urls]
Homepage = "https://github.com/Arcadia-Science/2025-GFP-variant-design"
Repository = "https://github.com/Arcadia-Science/2025-GFP-variant-design"

[tool.setuptools.packages.find]
where = ["."]
include = ["src*"]

[tool.setuptools.package-dir]
"" = "."
